--- a/page2.html
+++ b/page2.html
@@ -104,6 +104,51 @@
 
     </section>
 
+    <section id="section_3">
+      <div id="section_3_div1">
+        <div>
+          <h1>Book shipping containers at great prices</h1>
+          <p>
+            Know exactly what your shipping container costs including the BL fee,
+            handling charges, free days. 
+            No more surprises with container prices!
+          </p>
+          <a href="#form">
+            <i class="far fa-play-circle"></i> Signup & book shipping containers
+        </a>
+        </div>
+        <img src="./images/booked.svg" alt="image">
+      </div>
+      
+      <div id="section_3_div2">
+        <img src="./images/globe.svg" alt="image">
+      <div>
+        <h1>Shipping Containers, Locals & Customs. Book it all!</h1>
+        <p>
+          Book shipping containers, but also add origin and 
+          destination locals as well as customs clearance.
+           Door to door shipping is supported in certain parts of the world.
+        </p>
+        <a href="">View supported regions <i class="fas fa-chevron-right"></i> </a>
+      </div>
+      </div>
+      
+      <div id="section_3_div3">
+        <div>
+          <h1>Book different types of shipping containers online!</h1>
+          <p>
+            Book 20ft or 40ft containers. 
+            Choose containers based on commodity or refrigeration requirements.
+             Select your options, search and book online!
+          </p>
+          <a href="#form">
+            <i class="far fa-play-circle"></i> Signup & book shipping containers 
+        </a>
+        </div>
+        <img src="./images/container.svg" alt="image">
+      </div>
+  </section>
+
     <footer class="footer">
         <div class="social">
           <a href="">
