--- a/page4.html
+++ b/page4.html
@@ -79,62 +79,17 @@
         <div id="container_1">
             <h1>Booking Shipping Containers has never been easier</h1>
             <p>
-                View per kg air shipment rates from the leading airlines across the world.
-                 Book online in seconds, in supported geographies.
+                View freight rates for shipping containers from the world's leading shipping lines. 
+                Book online in seconds in supported geographies
             </p>
-            <button>Book air shipments now</button>
+            <button>Talk to an Expert</button>
             <ul>
-                <li><i class="fas fa-check-circle"></i> Book by KG </li>
-                <li><i class="fas fa-check-circle"></i> Book by CBM </li>
-                <li><i class="fas fa-check-circle"></i> Express services </li>
+                <li><i class="fas fa-check-circle"></i> 20ft Container</li>
+                <li><i class="fas fa-check-circle"></i> 40ft Container</li>
+                <li><i class="fas fa-check-circle"></i> LCL Shipments </li>
             </ul>
         </div>
     </section>
-
-    <section id="section_3">
-      <div id="section_3_div1">
-        <img src="./images/booked.svg" alt="image">
-        <div>
-          <h1>Book air shipments at the best prices. Every. Single. Time.</h1>
-          <p>
-            Know exactly what your air shipment costs including the Airway Bill fee,
-             Termainal handling charges & customs clearance charges. 
-             No more surprises with shipment prices!
-          </p>
-          <a href="#form">
-            <i class="far fa-play-circle"></i> Signup & Search freight charges
-        </a>
-        </div>
-      </div>
-      
-      <div id="section_3_div2">
-        <div>
-          <h1>Air shipments, Locals & Customs. Book it all!</h1>
-          <p>
-            Book air shipments in minutes.
-            Add origin and destination locals as well as customs clearance services. 
-            Door to door air shipments are supported in certain parts of the world.
-          </p>
-          <a href="">View supported regions <i class="fas fa-chevron-right"></i> </a>
-        </div>
-        <img src="./images/globe.svg" alt="image">
-      </div>
-      
-      <div id="section_3_div3">
-        <img src="./images/delivered.svg" alt="image">
-        <div>
-          <h1>Book different types of air shipments online!</h1>
-          <p>
-            Choose express services, for expedited air shipments. 
-            Add on refrigeration services, or ship pharma goods in specialised packaging.
-            Select your options, search and book online!
-          </p>
-          <a href="#form">
-            <i class="far fa-play-circle"></i> Signup & search freight charges
-        </a>
-        </div>
-      </div>
-  </section>
 
     <footer class="footer">
         <div class="social">
