--- a/page4.html
+++ b/page4.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style3.css">
+    <link rel="stylesheet" href="./css/style4.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <title>page 3</title>
+    <title>page 4</title>
 </head>
 <body>
 
@@ -77,19 +77,58 @@
 
     <section id="section_1">
         <div id="container_1">
-            <h1>Booking Shipping Containers has never been easier</h1>
+            <h1>Smarter supply chain visibility to
+              track containers across land & sea
+            </h1>
             <p>
-                View freight rates for shipping containers from the world's leading shipping lines. 
-                Book online in seconds in supported geographies
+              Data, analytics, and smart insights,
+              exactly when you need them, to keep your cargo moving smoothly. 
+              Track containers, and do so much more to optimise your shipment.
             </p>
-            <button>Talk to an Expert</button>
+            <button>Track containers now</button>
             <ul>
-                <li><i class="fas fa-check-circle"></i> 20ft Container</li>
-                <li><i class="fas fa-check-circle"></i> 40ft Container</li>
-                <li><i class="fas fa-check-circle"></i> LCL Shipments </li>
+                <li><i class="fas fa-check-circle"></i> Maersk Tracking </li>
+                <li><i class="fas fa-check-circle"></i> Hapag Tracking </li>
+                <li><i class="fas fa-check-circle"></i> CMA CGM Tracking & many more </li>
             </ul>
         </div>
     </section>
+
+    <section id="section_2">
+      <div>
+        <!-- <p> 
+          <i class="fas fa-mobile"></i> ACROSS SHIPPING LINES
+        </p> -->
+        <h1>Track containers & get actionable analytics</h1>
+        <p>
+          Track shipping containers from your warehouse to your client's. 30+ shipment events, 
+          consistent and standardised across all major carriers. Includes inland haulage in India.
+        </p>
+        <a href="#form">
+          <i class="far fa-play-circle"></i> Track containers now
+      </a>
+      </div>
+      <img src="./images/location.svg" alt="image">
+    </section>
+
+    <section id="section_4">
+      <img src="./images/mob.svg" alt="image">
+      <div>
+        <!-- <p> 
+          <i class="fas fa-mobile"></i> ACROSS SHIPPING LINES
+        </p> -->
+        <h1>Updates in your inbox, when you need them</h1>
+        <p>
+          No need to proactively check status on each shipment. 
+          Set up alerts for delays, rollovers, detention/demurrage free days expiry,
+          critical on-track events, or any other status change.
+        </p>
+        <a href="#form">
+          <i class="far fa-play-circle"></i> Track containers
+      </a>
+      </div>
+    </section>
+
 
     <footer class="footer">
         <div class="social">
