page 4 add something

--- a/page3.html
+++ b/page3.html
@@ -121,7 +121,7 @@
       </div>
       
       <div id="section_3_div3">
-        <img src="./images/delivered.svg" alt="image">
+        <img src="./images/aircraft.svg" alt="image">
         <div>
           <h1>Book different types of air shipments online!</h1>
           <p>
