--- a/page4.html
+++ b/page4.html
@@ -114,9 +114,6 @@
     <section id="section_4">
       <img src="./images/mob.svg" alt="image">
       <div>
-        <!-- <p> 
-          <i class="fas fa-mobile"></i> ACROSS SHIPPING LINES
-        </p> -->
         <h1>Updates in your inbox, when you need them</h1>
         <p>
           No need to proactively check status on each shipment. 
@@ -127,6 +124,21 @@
           <i class="far fa-play-circle"></i> Track containers
       </a>
       </div>
+    </section>
+
+    <section id="section_6">
+      <div>
+        <h1>Minimize delays and unexpected costs</h1>
+        <p>
+          Predictive ETA, carrier cutoffs and deadlines, data on port congestion, 
+          and more to help you foresee preventable hiccups and fix them. 
+          Re-routing options to help you manage unavoidable exceptions.
+        </p>
+        <a href="#form">
+          <i class="far fa-play-circle"></i> Track containers now
+        </a>
+      </div>
+      <img src="./images/market.svg" alt="image">
     </section>
 
 
