--- a/page4.html
+++ b/page4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style4.css">
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -104,9 +105,9 @@
           Track shipping containers from your warehouse to your client's. 30+ shipment events, 
           consistent and standardised across all major carriers. Includes inland haulage in India.
         </p>
-        <a href="#form">
-          <i class="far fa-play-circle"></i> Track containers now
-      </a>
+        <button onclick=setFormStatus()>
+          <i class="far fa-play-circle"></i> Signup & Search freight charges
+        </button>
       </div>
       <img src="./images/location.svg" alt="image">
     </section>
@@ -120,9 +121,9 @@
           Set up alerts for delays, rollovers, detention/demurrage free days expiry,
           critical on-track events, or any other status change.
         </p>
-        <a href="#form">
-          <i class="far fa-play-circle"></i> Track containers
-      </a>
+        <button onclick=setFormStatus()>
+          <i class="far fa-play-circle"></i> Signup & Search freight charges
+        </button>
       </div>
     </section>
 
@@ -134,12 +135,40 @@
           and more to help you foresee preventable hiccups and fix them. 
           Re-routing options to help you manage unavoidable exceptions.
         </p>
-        <a href="#form">
-          <i class="far fa-play-circle"></i> Track containers now
-        </a>
+        <button onclick=setFormStatus()>
+          <i class="far fa-play-circle"></i> Signup & Search freight charges
+        </button>
       </div>
       <img src="./images/market.svg" alt="image">
     </section>
+
+    <div class="forms_section" id="form_section" style="display: none">
+      <form action="" class="contact" id="contact_form" style="display: none">
+        <div class="form_title">
+          <h2>Contact Form</h2>
+          <i class="fa fa-close" onclick=setFormStatus()></i>
+        </div>
+        <center>
+          Fill and submit this form so our experts can contact you
+        </center>
+        <fieldset>
+          <legend>Full Name</legend>
+          <input type="text" required placeholder="Your Full Name">
+        </fieldset>
+        <fieldset>
+          <legend>Email</legend>
+          <input type="text" required placeholder="example@email.com">
+        </fieldset>
+        <fieldset>
+          <legend>Contact Number</legend>
+          <input type="text" required placeholder="+91 9999999999">
+        </fieldset>
+        <button>continue</button>
+        <center>
+          By continuing, I agree to PortWala’s <a href="">Terms of Use</a> & <a href="">Privacy Policy</a>
+        </center>
+      </form>
+    </div>
 
 
     <footer class="footer">
@@ -282,4 +311,6 @@
         </div>
       </footer>
 </body>
+<script src="./js/formControl.js"></script>
+
 </html>
