--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,9 @@
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <link rel="stylesheet" href="./css/style1.css">
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/footer.css">
+
     <title>page1</title>
 </head>
 <body>
@@ -99,9 +101,9 @@
                   Add services like origin and destination transport,
                   and customs clearance in just a few clicks.
                 </p>
-                <a href="#form">
+                <button onclick=setFormStatus()>
                   <i class="far fa-play-circle"></i> Signup & Search Rates
-              </a>
+                </button>
               </div>
               <img src="./images/charges.svg" alt="image">
             </div>
@@ -127,9 +129,9 @@
                   shipping lines,NVOCCs,airlines and customs clearance experts.
                   People with decades of experience in ocean and air cargo.
                 </p>
-                <a href="#form">
+                <button onclick=setFormStatus()>
                   <i class="far fa-play-circle"></i> Signup & Search freight charges
-              </a>
+                </button>
               </div>
               <img src="./images/supply.svg" alt="image">
             </div>
@@ -143,13 +145,41 @@
               Reach out to an ocean or 
               air cargo expert who can guide you step by step.
             </p>
-            <a href="#form">
-              Talk to an Expert &nbsp;<i class="far fa-arrow-alt-circle-right"></i>
-          </a>
+            <button onclick=setFormStatus()>
+              <i class="far fa-play-circle"></i> Signup & Search freight charges
+            </button>
           </div>
         </section>
     </main>
     
+    <div class="forms_section" id="form_section" style="display: none">
+      <form action="" class="contact" id="contact_form" style="display: none">
+        <div class="form_title">
+          <h2>Contact Form</h2>
+          <i class="fa fa-close" onclick=setFormStatus()></i>
+        </div>
+        <center>
+          Fill and submit this form so our experts can contact you
+        </center>
+        <fieldset>
+          <legend>Full Name</legend>
+          <input type="text" required placeholder="Your Full Name">
+        </fieldset>
+        <fieldset>
+          <legend>Email</legend>
+          <input type="text" required placeholder="example@email.com">
+        </fieldset>
+        <fieldset>
+          <legend>Contact Number</legend>
+          <input type="text" required placeholder="+91 9999999999">
+        </fieldset>
+        <button>continue</button>
+        <center>
+          By continuing, I agree to PortWala’s <a href="">Terms of Use</a> & <a href="">Privacy Policy</a>
+        </center>
+      </form>
+      </div>
+
     <footer class="footer">
         <div class="social">
           <a href="">
@@ -294,4 +324,5 @@
 </body>
 <script src="./js/navbar.js"></script>
 <script src="./js/index.js"></script>
+<script src="./js/formControl.js"></script>
 </html>
