--- a/page2.html
+++ b/page2.html
@@ -99,7 +99,7 @@
             and book shipping containers online.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i> Signup & Search freight charges
+          <i class="far fa-play-circle"></i> Signup & Search Rates
         </button>
         </div>
 
@@ -115,7 +115,7 @@
             No more surprises with container prices!
           </p>
           <button onclick=setFormStatus()>
-            <i class="far fa-play-circle"></i> Signup & Search freight charges
+            <i class="far fa-play-circle"></i> Signup & book shipping containers
           </button>
         </div>
         <img src="./images/booked.svg" alt="image">
@@ -143,7 +143,7 @@
              Select your options, search and book online!
           </p>
           <button onclick=setFormStatus()>
-            <i class="far fa-play-circle"></i> Signup & Search freight charges
+            <i class="far fa-play-circle"></i> Signup & book shipping containers
           </button>
         </div>
         <img src="./images/container.svg" alt="image">
