--- a/page4.html
+++ b/page4.html
@@ -106,7 +106,7 @@
           consistent and standardised across all major carriers. Includes inland haulage in India.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i> Signup & Search freight charges
+          <i class="far fa-play-circle"></i> Track containers now
         </button>
       </div>
       <img src="./images/location.svg" alt="image">
@@ -122,7 +122,7 @@
           critical on-track events, or any other status change.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i> Signup & Search freight charges
+          <i class="far fa-play-circle"></i> Track containers
         </button>
       </div>
     </section>
