--- a/page2.html
+++ b/page2.html
@@ -320,6 +320,7 @@
       </footer>
 </body>
 <script src="./js/navbar.js"></script>
+<script src="./js/index.js"></script>
 <script src="./js/formControl.js"></script>
 
 </html>
