--- a/page3.html
+++ b/page3.html
@@ -306,6 +306,8 @@
         </div>
       </footer>
 </body>
+<script src="./js/navbar.js"></script>
+<script src="./js/index.js"></script>
 <script src="./js/formControl.js"></script>
 
 </html>
