--- a/page1.html
+++ b/page1.html
@@ -102,7 +102,7 @@
                   and customs clearance in just a few clicks.
                 </p>
                 <button onclick=setFormStatus()>
-                  <i class="far fa-play-circle"></i> Signup & Search Rates
+                  <i class="far fa-play-circle"></i> <span>Signup & Search Rates</span>
                 </button>
               </div>
               <img src="./images/charges.svg" alt="image">
@@ -130,7 +130,8 @@
                   People with decades of experience in ocean and air cargo.
                 </p>
                 <button onclick=setFormStatus()>
-                  <i class="far fa-play-circle"></i> Signup & Search freight charges
+                  <i class="far fa-play-circle"></i> <span>Signup & Search Freight Charges
+                  </span>
                 </button>
               </div>
               <img src="./images/supply.svg" alt="image">
@@ -146,7 +147,7 @@
               air cargo expert who can guide you step by step.
             </p>
             <button onclick=setFormStatus()>
-              <i class="far fa-play-circle"></i>Talk to an Expert
+              <i class="far fa-play-circle"></i><span>Talk to an Expert</span>
             </button>
           </div>
         </section>
