--- a/page3.html
+++ b/page3.html
@@ -103,7 +103,7 @@
              No more surprises with shipment prices!
           </p>
           <button onclick=setFormStatus()>
-            <i class="far fa-play-circle"></i> Signup & Search freight charges
+            <i class="far fa-play-circle"></i> <span>Signup & Search freight charges</span>
           </button>
         </div>
       </div>
@@ -131,7 +131,7 @@
             Select your options, search and book online!
           </p>
           <button onclick=setFormStatus()>
-            <i class="far fa-play-circle"></i> Signup & Search freight charges
+            <i class="far fa-play-circle"></i> <span>Signup & Search freight charges</span>
           </button>
         </div>
       </div>
