--- a/page1.html
+++ b/page1.html
@@ -151,6 +151,22 @@
             </button>
           </div>
         </section>
+
+        <div class="part_7">
+          <h1>
+            <i class="fa fa-cogs gears"></i>
+          </h1>
+          <h1>100% Logistics. 0% Headaches.</h1>
+          <p>
+            Seven different suppliers to manage your import shipment? Spending all
+            your time on phone calls, so the shipment isn't delayed? Let our
+            experts handle the co-ordination.
+          </p>
+          <button onclick="setFormStatus()">
+            <span>Talk to an Expert </span>&nbsp;<i class="fa fa-arrow-right"></i>
+          </button>
+        </div>
+        <img src="./images/logistics3.svg" alt="logistics" class="logistic" />
     </main>
     
     <div class="forms_section" id="form_section" style="display: none">
