--- a/page4.html
+++ b/page4.html
@@ -106,7 +106,7 @@
           consistent and standardised across all major carriers. Includes inland haulage in India.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i> Track containers now
+          <i class="far fa-play-circle"></i> <span>Track containers now</span>
         </button>
       </div>
       <img src="./images/location.svg" alt="image">
@@ -122,7 +122,7 @@
           critical on-track events, or any other status change.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i> Track containers
+          <i class="far fa-play-circle"></i> <span>Track containers</span>
         </button>
       </div>
     </section>
@@ -136,7 +136,7 @@
           Re-routing options to help you manage unavoidable exceptions.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i> Signup & Search freight charges
+          <i class="far fa-play-circle"></i> <span>Track containers now</span>
         </button>
       </div>
       <img src="./images/market.svg" alt="image">
