--- a/page2.html
+++ b/page2.html
@@ -150,6 +150,22 @@
       </div>
   </section>
 
+  <div class="part_7">
+    <h1>
+      <i class="fa fa-cogs gears"></i>
+    </h1>
+    <h1>Book shipping containers without hassles!</h1>
+    <p>
+      Booking shipping containers can be complicated! 
+      Many supplier, many emails and many phone calls later, you are still uncertain which one to book. Well, reach out to 
+      our team of experts who'll help you book the perfect shipping container in minutes.
+    </p>
+    <button onclick="setFormStatus()">
+      <span>Talk to an Expert </span>&nbsp;<i class="fa fa-arrow-right"></i>
+    </button>
+  </div>
+  <img src="./images/logistics3.svg" alt="logistics" class="logistic" />
+
   <div class="forms_section" id="form_section" style="display: none">
     <form action="" class="contact" id="contact_form" style="display: none">
       <div class="form_title">
