--- a/page3.html
+++ b/page3.html
@@ -92,6 +92,21 @@
         </div>
     </section>
 
+    <section id="section_2">
+      <div>
+          <h1>Book shipping containers in minutes</h1>
+      <p>
+          Enter origin port, destination port, 
+          some additional details of your cargo 
+          and book shipping containers online.
+      </p>
+      <button onclick=setFormStatus()>
+        <i class="far fa-play-circle"></i> <span>Signup & Search Rates</span>
+      </button>
+      </div>
+  </section>
+
+
     <section id="section_3">
       <div id="section_3_div1">
         <img src="./images/booked.svg" alt="image">
@@ -136,6 +151,22 @@
         </div>
       </div>
   </section>
+
+  <div class="part_7">
+    <h1>
+      <i class="fa fa-cogs gears"></i>
+    </h1>
+    <h1>Book shipping containers without hassles!</h1>
+    <p>
+      Booking shipping containers can be complicated! 
+      Many supplier, many emails and many phone calls later, you are still uncertain which one to book. Well, reach out to 
+      our team of experts who'll help you book the perfect shipping container in minutes.
+    </p>
+    <button onclick="setFormStatus()">
+      <span>Talk to an Expert </span>&nbsp;<i class="fa fa-arrow-right"></i>
+    </button>
+  </div>
+  <img src="./images/logistics3.svg" alt="logistics" class="logistic" />
 
   <div class="forms_section" id="form_section" style="display: none">
     <form action="" class="contact" id="contact_form" style="display: none">
