--- a/page4.html
+++ b/page4.html
@@ -127,6 +127,21 @@
       </div>
     </section>
 
+    <section id="section_5">
+      <div>
+        <h1>Our team of experts is here to help</h1>
+        <p>
+          Have a question about your freight charges?
+          Reach out to an ocean or 
+          air cargo expert who can guide you step by step.
+        </p>
+        <button onclick=setFormStatus()>
+          <i class="far fa-play-circle"></i><span>Talk to an Expert</span>
+        </button>
+      </div>
+    </section>
+
+
     <section id="section_6">
       <div>
         <h1>Minimize delays and unexpected costs</h1>
