--- a/page4.html
+++ b/page4.html
@@ -129,14 +129,14 @@
 
     <section id="section_5">
       <div>
-        <h1>Our team of experts is here to help</h1>
+        <h1>Keep all stakeholders informed</h1>
         <p>
-          Have a question about your freight charges?
-          Reach out to an ocean or 
-          air cargo expert who can guide you step by step.
+          Regular status reports & event-specific alerts on all your shipments,
+           customised for each of your stakeholders.
+           Keep everyone informed on what matters to them, no distractions.
         </p>
         <button onclick=setFormStatus()>
-          <i class="far fa-play-circle"></i><span>Talk to an Expert</span>
+          <span>Track Containers now</span>&nbsp; &nbsp;<i class="fa-solid fa-circle-arrow-right"></i>
         </button>
       </div>
     </section>
@@ -326,6 +326,7 @@
         </div>
       </footer>
 </body>
+<script src="https://kit.fontawesome.com/0aa6c88d1b.js" crossorigin="anonymous"></script>
 <script src="./js/navbar.js"></script>
 <script src="./js/index.js"></script>
 <script src="./js/formControl.js"></script>
